fixed marble alignment

--- a/src/styles/screen.sass
+++ b/src/styles/screen.sass
@@ -483,6 +483,7 @@ $navigation__transition: max-height 0.5s ease-in-out
 .html
   background-image: url('../images/html.png')
   @include logoSize
+  margin-right: 10px
 .html p
   visibility: hidden
   opacity: 0
@@ -497,7 +498,7 @@ $navigation__transition: max-height 0.5s ease-in-out
 
 .javascript
   background-image: url('../images/js_1.png')
-  @include logoSize2
+  @include logoSize
   height: 60px
 .javascript:hover
   @include aniBounce
@@ -535,13 +536,14 @@ $navigation__transition: max-height 0.5s ease-in-out
 
 .sass
   background-image: url('../images/sass.png')
-  @include logoSize2
+  @include logoSize
+  margin-right: 15px
 .sass:hover
   @include aniBounce
 
 .react
   background-image: url('../images/react.png')
-  @include logoSize2
+  @include logoSize
 .react:hover
   @include aniBounce
 
